# llm-expect

./: .env.example  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLM_INSTRUCTIONS.md  README.md  SECURITY.md  TESTING.md  architecture.md  claude.md  llm.txt  mkdocs.yml  pyproject.toml  repro_script.py  reproduce_lazy_init.py  requirements.txt  tests.jsonl
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: api.md  comparisons.md  configuration.md  contributing.md  dataset_examples.md  examples.md  expectations.md  extending.md  index.md  installation.md  judges.md  llm.md  llm.txt  llms.txt  metrics.md  philosophy.md  quickstart.md  roadmap.md  why_jsonl.md
examples/: README.md  basic_example.py  eval_dataset.jsonl  example_class_method.py  example_extraction_openai.py  example_judge_openai.py  example_reference_openai.py  example_regex_openai.py  example_safety_openai.py  example_summary_openai.py
examples/basics/class_method/: README.md  dataset.jsonl  main.py
examples/basics/extraction/: README.md  main.py
examples/basics/judge/: README.md  dataset.jsonl  main.py
examples/basics/reference/: README.md  dataset.jsonl  main.py
examples/basics/regex/: README.md  dataset.jsonl  main.py
examples/basics/safety/: README.md  dataset.jsonl  main.py
examples/basics/summary/: README.md  dataset.jsonl  main.py
examples/datasets/: extraction.jsonl
examples/workflows/agent_router/: README.md  dataset.jsonl  main.py
examples/workflows/langchain_integration/: README.md  dataset.jsonl  main.py
examples/workflows/multi_step_chain/: README.md  dataset.jsonl  main.py
examples/workflows/native_tool_calling/: README.md  dataset.jsonl  main.py
examples/workflows/structured_extraction/: README.md  dataset.jsonl  main.py
llm_expect/: __init__.py  cli.py  config.py  decorator.py  errors.py  models.py  reporting.py  results.py
runs/2025-11-22_12-31-30_38428484/: metadata.json  report.txt  results.jsonl  summary.json
runs/2025-11-22_12-31-52_d4334c45/: metadata.json  report.txt  results.jsonl  summary.json
runs/2025-11-22_12-33-40_0c5ef39e/: metadata.json  report.txt  results.jsonl  summary.json
runs/2025-11-22_12-34-35_5c3e2782/: metadata.json  report.txt  results.jsonl  summary.json
runs/2025-11-22_12-34-57_bf01c151/: metadata.json  report.txt  results.jsonl  summary.json
tests/: test_basic.py  test_class_methods.py  test_dynamic_metrics.py  test_judge_metric.py  test_parallel_execution.py  test_reporting.py  test_safety_refusal.py
vald8/: __init__.py  cli.py  config.py  dataset.py  decorator.py  errors.py  judges.py  metrics.py  models.py  results.py
wiki/: Architecture-Deep-Dive.md  Contribution-Guidelines.md  Home.md  Product-Philosophy.md  Roadmap.md  Use-Cases.md
